# ankisync2

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  example.ipynb  pyproject.toml
__examples__/anki-desktop/: .gitignore  backup.py  clean_user_data.py  convert.py  create_note.py  get_anki_path.py  has_vocabs.py  read_user_data.py  update_tags.py
__examples__/anki-desktop/common/: notes.py
__examples__/apkg/: convert.py  create_note.py  has_vocabs.py  pyproject.toml  unzip.py  update_tags.py
__examples__/apkg/common/: notes.py  vocab.py
__utils__/anki2.1.26/: Dockerfile
anki2.1.26/: README.md  start.sh
ankisync2/: __init__.py  anki.py  ankiconnect.py  apkg.py  builder.py  db.py  dir.py  fields.py  util.py
ankisync2/anki20/: __init__.py  builder.py  db.py
ankisync2/anki21/: db.py
ankisync2/preset/: __init__.py  default.json
examples/: ankisync2_api.html  ankisync2_api.py  ankisync2_api_fixed.diff  ankisync2_web.py  card-actions.py  clean_user_data.py  deck-actions.py  get_anki_path.py  graphical-actions.py  media-actions.py  miscellaneous-actions.py  model-actions.py  note-actions.py  read_user_data.py  statistic-actions.py
scripts/: clean_user_data.py  convert.py  create_note.py  get_anki_path.py  has_vocabs.py  read_user_data.py  update_tags.py
tests/: example1.apkg  test_dbseek.py  test_readme.py  test_update.py
