[tool.poetry]
name = "ankisync2"
version = "0.2.1.2"
description = "Doing in Anki what AnkiConnect cannot do"
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.9"
shortuuid = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
jupyter = "^1.0"
notebook = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
