[tool.poetry]
name = "ankisync2"
version = "0.2.4.1"
description = "Creating and editing *.apkg and *.anki2 safely"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patarapolw/ankisync2"
homepage = "https://github.com/patarapolw/ankisync2"

keywords = ["anki", "srs", "memorization", "spaced-repetition"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.9"
shortuuid = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
jupyter = "^1.0"
notebook = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
