[tool.poetry]
name = "ankisync2"
version = "0.3.2"
description = "Creating and editing *.apkg and *.anki2 safely"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patarapolw/ankisync2"
homepage = "https://github.com/patarapolw/ankisync2"

keywords = ["anki", "srs", "memorization", "spaced-repetition", "anki-flashcards"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.9"
shortuuid = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
requests = "^2.25.0"
"ruamel.yaml" = "^0.16.12"
pinyin = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
